--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<div>
 										<h3>V -Series International Sdn Bhd</h3>
 										<h4>SOFTWARE ENGINEER</h4>
-										<h5>DEC 2018 - PRESENT</h5>
+										<h5>DEC 2018 - NOV 2020</h5>
 										<ul>
 											<li>
 												Oversaw troubleshooting of technical issues to solve problems within a reasonable time frame.
@@ -78,7 +78,7 @@
 									<div>
 										<h3>Fusionex</h3>
 										<h4>JUNIOR DEVELOPER (INTERNSHIP)</h4>
-										<h5>AUG 2018 - DEC 2018</h5>
+										<h5>Date</h5>
 										<ul>
 											<li>
 												Consistently met deadlines and requirements for all production work orders.
