--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 												Designed, implemented and monitored the system for continuous improvement in a fast-paced environment.
 											</li>
 											<li>
-												Built new widgets or functions according to the requirements using Android.
+												Built new widgets or functions according to the requirements using Android Studio which involves Android platform.
 											</li>
 											<li>
 												JAVA has been used as a main programming language in the development process.
