--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 											<li>
 												Currently involved in web development using HTML5, Javascript and CSS3.
 											</li>
+											<li>
+												Using Git to control the version of the software during development process.
+
+											</li>
 										</ul>
 									</div>
 									<div>
@@ -144,12 +148,41 @@
 									</ul>
 									<ul>
 										<li>
+											<h3>Directory Kiosk Solution</h3>
+											<ul class="skills">
+												<li>Javascript</li>
+												<li>HTML5</li>
+												<li>CSS</li>
+												<li>Bootstrap</li>
+											</ul>
+											<h4 class="desc">Description</h4>
+											<p>The Directory Kiosk leveraged touchscreen technology to deliver interactive wayfinding and building directories to help visitors find locations within the building. The interactive wayfinding kiosks enable to provide the visitor with detailed information in a rich, intuitive way that creates engaging interactions and more info can be found here: <a href="https://v-series.net/v2/">https://v-series.net/v2/</a>.</p>
+											<h4 class="resp">Responsibility</h4>
+											<ul>
+												<li>
+													Design the front end functionality of the application using HTML, CSS and Javascript.
+												</li>
+												<li>
+													Translate UI/UX design wireframes to actual code.
+												</li>
+												<li>
+													Define how the application looks and how it works.
+												</li>
+												<li>
+													Develop new user facing features based on requirements.
+												</li>
+											</ul>
+										</li>
+									</ul>
+									<ul>
+										<li>
 											<h3>Digital Signage Solution</h3>
 											<ul class="skills">
 												<li>JAVA</li>
 												<li>XML</li>
 												<li>MS SQL Server</li>
 												<li>Android</li>
+												<li>Git</li>
 											</ul>
 											<h4 class="desc">Description</h4>
 											<p>Digital Signage Solution is a specialized form of silver casting in which video or multimedia content is displayed in public places for the audience’s specific purpose. It is expected to provide a cloud-based solution for the client where they can update the content in a content management system(CMS).  It provides a multi-purpose solution for the client such as the digital menu, advertising standee, and more info can be found here: <a href="https://v-series.net/v2/">https://v-series.net/v2/</a>.</p>
@@ -172,6 +205,9 @@
 												</li>
 												<li>
 													Providing technical support to the clients.
+												</li>
+												<li>
+													Using Git to control the version of the software during development.
 												</li>
 											</ul>
 										</li>
