--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro_pic.jpg" alt="" /></span>
-								<p>I have almost 2 years of experience as a software engineer and have worked at both small and large organizations. While I’m a proficient android java developer, I also involved in desktop development using C# as a freelancer job. By the way, all my projects are listed <a href="#project">here</a>.</p>
+								<p>I have almost 2 years of experience as a software engineer and have worked at both small and large organizations. While I’m a proficient android java developer, I involved in web development for directoy kiosk. I also involved in desktop development using C# as a freelancer job. By the way, all my projects are listed <a href="#project">here</a>.</p>
 								<p>I love to explore new things such as new technology and coding languages. While exploring, I’m attracted to solving the difficulty or problems that have been faced in the exploring process. I’m looking for an individual software developer role where I can gain experience in different projects.</p>
 							</article>
 
@@ -71,7 +71,7 @@
 												Worked with teams from other projects and departments to create apps and data-driven by customer input.
 											</li>
 											<li>
-												Currently involved in web development using HTML5, Javascript and CSS3.
+												Involved in web development for directory kiosk using HTML5, JavaScript and CSS3.
 											</li>
 											<li>
 												Using Git to control the version of the software during development process.
@@ -149,7 +149,7 @@
 										<li>
 											<h3>Directory Kiosk Solution</h3>
 											<ul class="skills">
-												<li>Javascript</li>
+												<li>JavaScript</li>
 												<li>HTML5</li>
 												<li>CSS</li>
 												<li>Bootstrap</li>
