--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Terrence's Portfolio</title>
@@ -50,6 +50,31 @@
 								<h2 class="major">Experience</h2>
 								<span class="image main"><img src="images/work_pic.jpg" alt="" /></span>
 								<div id="experience-timeline">
+									<div>
+										<h3>Vigorish Sdn Bhd</h3>
+										<h4>SOFTWARE ENGINEER</h4>
+										<h5>FEB 2021 - Present</h5>
+										<ul>
+											<li>
+												Develop high availability .Net application, Windows Service Application and API Integrations.
+											</li>
+											<li>
+												Participate in performance tuning, stress test, load test, etc.
+											</li>
+											<li>
+												Compile, manage and document user requirements then transform into functional requirements.
+											</li>
+											<li>
+												C# has been used as a main programming language in the development process.
+											</li>
+											<li>
+												Source code versioning and control using Azure DevOps.
+											</li>
+											<li>
+												Involves in web development environment using HTML, JavaScript and CSS3.
+											</li>
+										</ul>
+									</div>
 									<div>
 										<h3>V -Series International Sdn Bhd</h3>
 										<h4>SOFTWARE ENGINEER</h4>
@@ -117,6 +142,42 @@
 								<h2 class="major">Project</h2>
 								<span class="image main"><img src="images/project_pic.jpg" alt="" /></span>
 								<div class="project-list">
+									<ul>
+										<li>
+											<h3>Web Content Management System (WCMS)</h3>
+											<ul class="skills">
+												<li>.NET</li>
+												<li>C#</li>
+												<li>Javascript</li>
+												<li>HTML5</li>
+												<li>CSS</li>
+												<li>MSSQL</li>
+											</ul>
+											<h4 class="desc">Description</h4>
+											<p>WCMS helps users maintain, control, change and reassemble content on a webpage. WCMS allowed users to access through a web browser, then edit the content and maintain control of the layout from that browser-based interface. There are two parts in WCMS which are Content Management Application (CMA) and Content Delivery Application (CDA). CMA is a user interface that enable users to design, create, modify and remove content from the website without needing help from the IT department while CDA provides back-end services that take the content that users create in the CMA and turn it into the website that visitors can access.</p>
+											<h4 class="resp">Responsibility</h4>
+											<ul>
+												<li>
+													Written the code logic and their implementations.
+												</li>
+												<li>
+													Translate the requirements to actual code.
+												</li>
+												<li>
+													Integrated third parties api to the system.
+												</li>
+												<li>
+													Frequent code reviews and code optimization.
+												</li>
+												<li>
+													Develop API for third-party usage.
+												</li>
+												<li>
+													Maintained existing system and daily bugs fix.
+												</li>
+											</ul>
+										</li>
+									</ul>
 									<ul>
 										<li>
 											<h3>Billing And Inventory Management System (Freelance Project)</h3>
