--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro_pic.jpg" alt="" /></span>
-								<p>I have almost 2 years of experience as a software engineer and have worked at both small and large organizations. While I’m a proficient android java developer, I involved in web development for directoy kiosk. I also involved in desktop development using C# as a freelancer job. By the way, all my projects are listed <a href="#project">here</a>.</p>
+								<p>I have more than 2 years of experience as a software engineer and have worked at both small and large organizations. While I’m a proficient android java developer, I involved in web development for directoy kiosk. I also involved in desktop development using C# as a freelancer job. By the way, all my projects are listed <a href="#project">here</a>.</p>
 								<p>I love to explore new things such as new technology and coding languages. While exploring, I’m attracted to solving the difficulty or problems that have been faced in the exploring process. I’m looking for an individual software developer role where I can gain experience in different projects.</p>
 							</article>
 
