--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<ul>
 					<li><a href="#intro">Intro</a></li>
 					<li><a href="#experience">Experience</a></li>
-					<li><a href="#certificate">Licenses & Certifications</a></li>
+					<li><a href="#certificate">Certifications</a></li>
 					<li><a href="#project">Project</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -170,13 +170,13 @@
 							<div class="text-column">
 								<ul>
 									<li>
-										Issued on 24 August 2021
+										Issued on 24 August 2021.
 									</li>
 									<li>
-										Issued by Microsoft
+										Issued by Microsoft.
 									</li>
 									<li>
-										Credential ID H947-6746
+										Credential ID H947-6746.
 									</li>
 									<li>
 										<a href="https://www.credly.com/badges/ec24a174-815f-43dc-8659-138fa7e947a2?source=linked_in_profile" target="_blank">See credential</a>
