--- a/resume/index.html
+++ b/resume/index.html
@@ -66,13 +66,13 @@
                                 <i class="fas fa-folder-open"></i>
                             </div>
                             <div class="detail">
-                                https://terrencesiow.github.io/
+                                https://terrencesiow.github.io/ portfolio/
                             </div>
                         </div>
                         <!-- For web -->
                         <!-- <ul class="row social-link no-margin">
                             <li><a href="https://www.linkedin.com/in/terrence-siow/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://terrencesiow.github.io/" target="_blank"><i class="fas fa-folder-open"></i></a></li>
+                            <li><a href="https://terrencesiow.github.io/portfolio/" target="_blank"><i class="fas fa-folder-open"></i></a></li>
                         </ul> -->
 
                         <!-- <h4 class="ltitle">Referencess</h4>
