--- a/resume/index.html
+++ b/resume/index.html
@@ -53,7 +53,7 @@
 
                         <h4 class="ltitle">Portfolio</h4>
                         <!-- For pdf -->
-                        <div class="contact-box">
+                        <!-- <div class="contact-box">
                             <div class="icon">
                                 <i class="fab fa-linkedin-in"></i>
                             </div>
@@ -68,12 +68,12 @@
                             <div class="detail">
                                 https://terrencesiow.github.io/ portfolio/
                             </div>
-                        </div>
+                        </div> -->
                         <!-- For web -->
-                        <!-- <ul class="row social-link no-margin">
+                        <ul class="row social-link no-margin">
                             <li><a href="https://www.linkedin.com/in/terrence-siow/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="https://terrencesiow.github.io/portfolio/" target="_blank"><i class="fas fa-folder-open"></i></a></li>
-                        </ul> -->
+                        </ul>
 
                         <!-- <h4 class="ltitle">Referencess</h4>
                         <div class="refer-cov">
@@ -138,13 +138,13 @@
                         <h2 class="rit-titl"><i class="far fa-user"></i> Profile </h2>
                         <div class="about">
                             <p>Agile Software Engineer talented at contributing to multi-team development projects. Collaborative designer of exceptionally useful solutions and perfectly customized products. Knowledgeable in programming environments ranging from .NET to JAVA.</p>
-                            <!-- <div class="btn-ro row no-margin">
+                            <div class="btn-ro row no-margin">
                                 <ul class="btn-link">
                                     <li>
-                                        <a href=""><i class="fas fa-cloud-download-alt"></i> Download Resume</a>
+                                        <a href="./resume.pdf"><i class="fas fa-cloud-download-alt"></i> Download Resume</a>
                                     </li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
 
                         <h2 class="rit-titl"><i class="fas fa-briefcase"></i> Work Experiance </h2>
