--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@
 	<title>Terrence's Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta property="og:image" content="./preview.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
