--- a/resume/index.html
+++ b/resume/index.html
@@ -209,7 +209,7 @@
                         </div>
                         <div class="work-exp">
                             <h6>Software Engineer <span>DEC 2018- NOV 2020</span></h6>
-                            <i>V -Series International Sdn Bhd / Malaysia</i>
+                            <i>V-Series International Sdn Bhd / Malaysia</i>
                             <ul>
                                 <li>
                                     <div class="desc-wrap">
@@ -255,7 +255,7 @@
                         </div>
                         <div class="work-exp">
                             <h6>Junior Developer(Internship) <span>AUG 2018- DEC 2018</span></h6>
-                            <i>V -Series International Sdn Bhd / Malaysia</i>
+                            <i>Fusionex / Malaysia</i>
                             <ul>
                                 <li>
                                     <div class="desc-wrap">
