--- a/resume/index.html
+++ b/resume/index.html
@@ -193,7 +193,7 @@
                                     <div class="desc-wrap">
                                         <i class="far fa-hand-point-right"></i>
                                         <div>
-                                            Assisted team with development of web-based applications in agile environment.
+                                            Assisting team with development of web-based applications in agile environment.
                                         </div>
                                     </div>
                                 </li>
@@ -309,7 +309,7 @@
                                 </li>
                                 <li class="col-md-6"><span>JAN 2012 - DEC 2014</span> <br>
                                     PMR & SPM <br>
-                                    <i> SML Methodist, Banting </i>
+                                    <i> SMK Methodist, Banting </i>
                                 </li>
                             </ul>
                         </div>
