Add current job

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,6 +62,11 @@
 				<span class="image main"><img src="images/work_pic.jpg" alt="" /></span>
 				<div id="experience-timeline">
 					<div>
+						<h3>Time dotCom</h3>
+						<h4>OSS Engineer</h4>
+						<h5>JUNE 2021 - NOW</h5>
+					</div>
+					<div>
 						<h3>Vigorish Sdn Bhd</h3>
 						<h4>SOFTWARE ENGINEER</h4>
 						<h5>FEB 2021 - JUNE 2021</h5>
