--- a/resume/index.html
+++ b/resume/index.html
@@ -59,7 +59,7 @@
                                 <i class="fab fa-linkedin-in"></i>
                             </div>
                             <div class="detail">
-                                https://www.linkedin.com/in/ terrence-siow/
+                                LinkedIn
                             </div>
                         </div>
                         <div class="contact-box pb0">
@@ -67,7 +67,7 @@
                                 <i class="fas fa-folder-open"></i>
                             </div>
                             <div class="detail">
-                                https://terrencesiow.github.io/ portfolio/
+                                Portfolio
                             </div>
                         </div> -->
                         <!-- For web -->
@@ -152,6 +152,40 @@
                         <div class="work-exp">
                             <h6>OSS Engineer <span>JUN 2021 - Current</span></h6>
                             <i>TIME dotCom Berhad / Malaysia</i>
+                            <ul>
+                                <li>
+                                    <div class="desc-wrap">
+                                        <i class="far fa-hand-point-right"></i>
+                                        <div>
+                                            Carry out software deployment, upgrade and testing, and solve the problems in the implementation process. 
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="desc-wrap">
+                                        <i class="far fa-hand-point-right"></i>
+                                        <div>
+                                            Implement automation process and success to reduce 80% of the human workload.
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="desc-wrap">
+                                        <i class="far fa-hand-point-right"></i>
+                                        <div>
+                                            Provide support for internal users on OSS systems. 
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="desc-wrap">
+                                        <i class="far fa-hand-point-right"></i>
+                                        <div>
+                                            Maintained existing applications and designed and delivered new applications.
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                         <div class="work-exp">
                             <h6>Software Engineer <span>FEB 2021 - JUN 2021</span></h6>
@@ -323,7 +357,13 @@
                                 <li><i class="far fa-bookmark"></i> Credential ID H947-6746. </li>
                             </ul>
                         </div>
-
+                        <div class="certificate">
+                            <h6>PCAP – Certified Associate in Python Programming</h6>
+                            <ul>
+                                <li><i class="far fa-bookmark"></i> Issued on 23 March 20221. </li>
+                                <li><i class="far fa-bookmark"></i> Issued by Python Institute. </li>
+                            </ul>
+                        </div>
                         <h2 class="rit-titl"><i class="fas fa-users-cog"></i> Skills</h2>
                         <div class="profess-cover row no-margin">
                             <div class="col-md-6">
