--- a/resume/index.html
+++ b/resume/index.html
@@ -139,13 +139,13 @@
                         <h2 class="rit-titl"><i class="far fa-user"></i> Profile </h2>
                         <div class="about">
                             <p>Agile Software Engineer talented at contributing to multi-team development projects. Collaborative designer of exceptionally useful solutions and perfectly customized products. Knowledgeable in programming environments ranging from .NET to JAVA.</p>
-                            <div class="btn-ro row no-margin">
+                            <!--<div class="btn-ro row no-margin">
                                 <ul class="btn-link">
                                     <li>
                                         <a href="./resume.pdf"><i class="fas fa-cloud-download-alt"></i> Download Resume</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div>-->
                         </div>
 
                         <h2 class="rit-titl"><i class="fas fa-briefcase"></i> Work Experiance </h2>
