Update work descriptions

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,7 +48,7 @@
             ><img src="images/intro_pic.jpg" alt=""
           /></span>
           <p>
-            I have more than 2 years of experience as a software engineer and
+            I have more than 3 years of experience as a software engineer and
             have worked at both small and large organizations. While I’m a
             proficient android java developer, I involved in web development and
             also script automation. I also involved in desktop development using
@@ -72,26 +72,57 @@
           /></span>
           <div id="experience-timeline">
             <div>
-              <h3>Time dotCom</h3>
+              <h3>TIME dotCom Berhad</h3>
               <h4>OSS Engineer</h4>
               <h5>JUNE 2021 - NOW</h5>
               <ul>
-                <li>
-                  Carry out software deployment, upgrade and testing, and solve
-                  the problems in the implementation process.
-                </li>
                 <li>
                   Implement automation process and success to reduce 80% of the
                   human workload.
                 </li>
                 <li>
-                  Compile and output relevant implementation documents according
-                  to company requirements.
+                  Reviewed project specifications and designed technology
+                  solutions that met or exceeded performance expectations.
                 </li>
-                <li>Provide support for internal users on OSS systems.</li>
                 <li>
-                  Maintained existing applications and designed and delivered
-                  new applications.
+                  Design and develop robust solutions to meet client
+                  requirements for functionality, scalability and performance.
+                </li>
+                <li>
+                  Developed robust, scalable, modular and API-centric
+                  infrastructures.
+                </li>
+                <li>
+                  Collaborated with management, internal and development
+                  partners regarding software application design status and
+                  project progress
+                </li>
+                <li>
+                  Transitioned to GIT version control and pair programming to
+                  raise speed 30%.
+                </li>
+                <li>
+                  Introduced and prepared coding standard documentation to
+                  division to enhance product development.
+                </li>
+                <li>
+                  Monitored automated build and continuous software integration
+                  process to drive build/release failure resolution.
+                </li>
+                <li>
+                  Worked with cross-functional design teams to create software
+                  solutions that improved overall functionality and performance.
+                </li>
+                <li>
+                  Built automation tools and applications to deploy
+                  next-generation platforms.
+                </li>
+                <li>
+                  Researched and identified new technologies to use in agile
+                  development environment.
+                </li>
+                <li>
+                  Documented project design for reference and future use cases.
                 </li>
               </ul>
             </div>
