--- a/resume/index.html
+++ b/resume/index.html
@@ -181,7 +181,7 @@
                   Knowledgeable in programming environments ranging from .NET to
                   JAVA.
                 </p>
-                <div class="btn-ro row no-margin">
+                <!-- <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
                       <a href="./resume.pdf"
@@ -190,7 +190,7 @@
                       >
                     </li>
                   </ul>
-                </div>
+                </div> -->
               </div>
 
               <h2 class="rit-titl">
@@ -539,7 +539,7 @@
                 <h6>PCAP – Certified Associate in Python Programming</h6>
                 <ul>
                   <li>
-                    <i class="far fa-bookmark"></i> Issued on 23 March 20221.
+                    <i class="far fa-bookmark"></i> Issued on 23 March 2022.
                   </li>
                   <li>
                     <i class="far fa-bookmark"></i> Issued by Python Institute.
