--- a/resume/index.html
+++ b/resume/index.html
@@ -85,7 +85,7 @@
                 </li>
               </ul>
 
-              <!-- <h4 class="ltitle">Referencess</h4>
+              <!-- <h4 class="ltitle">References</h4>
                         <div class="refer-cov">
                             <b>Jonney Smith</b>
                             <p>CEO Casinocarol</p>
@@ -181,7 +181,7 @@
                   Knowledgeable in programming environments ranging from .NET to
                   JAVA.
                 </p>
-                <!-- <div class="btn-ro row no-margin">
+                <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
                       <a href="./resume.pdf"
@@ -190,7 +190,7 @@
                       >
                     </li>
                   </ul>
-                </div> -->
+                </div>
               </div>
 
               <h2 class="rit-titl">
