--- a/resume/index.html
+++ b/resume/index.html
@@ -184,7 +184,7 @@
                 <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
-                      <a href="./resume.pdf"
+                      <a href="./Terrence_Siow_resume.pdf"
                         ><i class="fas fa-cloud-download-alt"></i> Download
                         Resume</a
                       >
