Update portfolio with new certification

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -255,7 +255,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://drive.google.com/file/d/1uADjOWLYRMlP_3vhyEox_VZNiBQaa6BQ/view?usp=sharing"
+                        href="./images/azure_ai_certification.jpg"
                         target="_blank"
                         >Certificate</a
                       >
@@ -284,6 +284,26 @@
                       <a
                         href="https://verify.openedg.org/?id=QR4X.y5Dd.k8hr"
                         target="_blank"
+                        >Certificate</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </ul>
+            <ul class="no-bullets">
+              <div class="cert-wrap">
+                <div class="image-column">
+                  <img src="images/devops.jpg" />
+                </div>
+                <div class="text-column">
+                  <ul>
+                    <li>Issued on 25 August 2022.</li>
+                    <li>Expires on 25 Aug 2024</li>
+                    <li>Issued by DevOps Institute.</li>
+                    <li>Credential ID 23512279</li>
+                    <li>
+                      <a href="./devops_certification.pdf" target="_blank"
                         >Certificate</a
                       >
                     </li>
