Update resume with new certificate

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -299,9 +299,9 @@
                 <div class="text-column">
                   <ul>
                     <li>Issued on 25 August 2022.</li>
-                    <li>Expires on 25 Aug 2024</li>
+                    <li>Expires on 25 Aug 2024.</li>
                     <li>Issued by DevOps Institute.</li>
-                    <li>Credential ID 23512279</li>
+                    <li>Credential ID 23512279.</li>
                     <li>
                       <a href="./devops_certification.pdf" target="_blank"
                         >Certificate</a
