--- a/resume/index.html
+++ b/resume/index.html
@@ -181,7 +181,7 @@
                   Knowledgeable in programming environments ranging from .NET to
                   JAVA.
                 </p>
-                <div class="btn-ro row no-margin">
+                <!-- <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
                       <a href="./Terrence_Siow_resume.pdf"
@@ -190,7 +190,7 @@
                       >
                     </li>
                   </ul>
-                </div>
+                </div> -->
               </div>
 
               <h2 class="rit-titl">
@@ -543,6 +543,23 @@
                   </li>
                   <li>
                     <i class="far fa-bookmark"></i> Issued by Python Institute.
+                  </li>
+                </ul>
+              </div>
+              <div class="certificate">
+                <h6>DevOps Foundation</h6>
+                <ul>
+                  <li>
+                    <i class="far fa-bookmark"></i> Issued on 25 August 2022.
+                  </li>
+                  <li>
+                    <i class="far fa-bookmark"></i> Expires on 25 Aug 2024.
+                  </li>
+                  <li>
+                    <i class="far fa-bookmark"></i> Issued by DevOps Institute.
+                  </li>
+                  <li>
+                    <i class="far fa-bookmark"></i> Credential ID 23512279.
                   </li>
                 </ul>
               </div>
