replace old resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -181,7 +181,7 @@
                   Knowledgeable in programming environments ranging from .NET to
                   JAVA.
                 </p>
-                <!-- <div class="btn-ro row no-margin">
+                <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
                       <a href="./Terrence_Siow_resume.pdf"
@@ -190,7 +190,7 @@
                       >
                     </li>
                   </ul>
-                </div> -->
+                </div>
               </div>
 
               <h2 class="rit-titl">
