remove duplicate points

--- a/resume/index.html
+++ b/resume/index.html
@@ -182,14 +182,14 @@
                   JAVA.
                 </p>
                 <div class="btn-ro row no-margin">
-                  <ul class="btn-link">
+                  <!-- <ul class="btn-link">
                     <li>
                       <a href="./Terrence_Siow_resume.pdf"
                         ><i class="fas fa-cloud-download-alt"></i> Download
                         Resume</a
                       >
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
 
@@ -232,16 +232,6 @@
                     <div class="desc-wrap">
                       <i class="far fa-hand-point-right"></i>
                       <div>
-                        Design and develop robust solutions to meet client
-                        requirements for functionality, scalability and
-                        performance.
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="desc-wrap">
-                      <i class="far fa-hand-point-right"></i>
-                      <div>
                         Developed robust, scalable, modular and API-centric
                         infrastructures.
                       </div>
@@ -254,16 +244,6 @@
                         Collaborated with management, internal and development
                         partners regarding software application design status
                         and project progress
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="desc-wrap">
-                      <i class="far fa-hand-point-right"></i>
-                      <div>
-                        Design and develop robust solutions to meet client
-                        requirements for functionality, scalability and
-                        performance.
                       </div>
                     </div>
                   </li>
