Replace old resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -182,14 +182,14 @@
                   JAVA.
                 </p>
                 <div class="btn-ro row no-margin">
-                  <!-- <ul class="btn-link">
+                  <ul class="btn-link">
                     <li>
                       <a href="./Terrence_Siow_resume.pdf"
                         ><i class="fas fa-cloud-download-alt"></i> Download
                         Resume</a
                       >
                     </li>
-                  </ul> -->
+                  </ul>
                 </div>
               </div>
 
