--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -323,6 +323,54 @@
           <div class="project-list">
             <ul>
               <li>
+                <h3>SmartCA</h3>
+                <ul class="skills">
+                  <li>ReactJS</li>
+                  <li>Typescript</li>
+                  <li>Javascript</li>
+                  <li>Redux</li>
+                  <li>CSS</li>
+                  <li>GeoJSON</li>
+                  <li>Postgres</li>
+                  <li>Git</li>
+                </ul>
+                <h4 class="desc">Description</h4>
+                <p>
+                  SmartCA is a tool that consists of two parts. The first part
+                  is designed to help staff members manage and track
+                  infrastructure and related data, including location, cost, and
+                  usage information. SmartCA has a mapping feature that allows
+                  staff members to view and manipulate data about the
+                  infrastructures on the map. The second part is designed to
+                  help managers track and analyze data about broadband usage,
+                  service cancellations, and other relevant information. SmartCA
+                  is used to help optimize the deployment and maintenance of
+                  infrastructures, as well as inform marketing and customer
+                  service strategies.
+                </p>
+                <h4 class="resp">Responsibility</h4>
+                <ul>
+                  <li>Written the code logic and their implementations.</li>
+                  <li>Translate the requirements to actual code.</li>
+                  <li>
+                    Written the script to translate the infrastructure data into
+                    GeoJSON automated.
+                  </li>
+                  <li>Frequent code reviews and code optimization.</li>
+                  <li>Communicate and perform change request from users.</li>
+                  <li>Maintained existing system and daily bugs fix.</li>
+                  <li>
+                    Implement and using Git to control the version of the
+                    software during development.
+                  </li>
+                  <li>
+                    Introduced and prepared coding standard documentation.
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <ul>
+              <li>
                 <h3>Web Content Management System (WCMS)</h3>
                 <ul class="skills">
                   <li>.NET</li>
@@ -331,6 +379,7 @@
                   <li>HTML5</li>
                   <li>CSS</li>
                   <li>MSSQL</li>
+                  <li>Git</li>
                 </ul>
                 <h4 class="desc">Description</h4>
                 <p>
@@ -354,6 +403,10 @@
                   <li>Frequent code reviews and code optimization.</li>
                   <li>Develop API for third-party usage.</li>
                   <li>Maintained existing system and daily bugs fix.</li>
+                  <li>
+                    Using Git to control the version of the software during
+                    development.
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -367,6 +420,7 @@
                   <li>.Net</li>
                   <li>MS SQL Server</li>
                   <li>XAML</li>
+                  <li>Git</li>
                 </ul>
                 <h4 class="desc">Description</h4>
                 <p>
@@ -403,6 +457,7 @@
                   <li>HTML5</li>
                   <li>CSS</li>
                   <li>Bootstrap</li>
+                  <li>Git</li>
                 </ul>
                 <h4 class="desc">Description</h4>
                 <p>
@@ -483,6 +538,7 @@
                   <li>.Net</li>
                   <li>MS SQL Server</li>
                   <li>XAML</li>
+                  <li>Git</li>
                 </ul>
                 <h4 class="desc">Description</h4>
                 <p>
@@ -507,6 +563,10 @@
                   <li>
                     Written data access to MS Sql Server based on the
                     requirements.
+                  </li>
+                  <li>
+                    Using Git to control the version of the software during
+                    development.
                   </li>
                 </ul>
               </li>
