--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -323,6 +323,57 @@
           <div class="project-list">
             <ul>
               <li>
+                <h3>Zerotouch</h3>
+                <ul class="skills">
+                  <li>Laravel</li>
+                  <li>PHP</li>
+                  <li>Nginx</li>
+                  <li>Postgres</li>
+                  <li>Git</li>
+                  <li>Docker</li>
+                </ul>
+                <h4 class="desc">Description</h4>
+                <p>
+                  Zerotouch is a tool that provides real-time services to users
+                  through an API, and is designed to help streamline and
+                  automate the process of managing broadband service. It allows
+                  users to easily activate, modify, terminate, and reactivate
+                  customer broadband service as needed, and can help to simplify
+                  and automate the process of broadband installation and other
+                  operations. As a centric API, Zerotouch is the main point of
+                  control for managing the broadband service, which can help to
+                  reduce the possibility of errors in the process. This can make
+                  it easier for users to manage customer broadband service, and
+                  can help to improve the overall experience of using the
+                  service.
+                </p>
+                <h4 class="resp">Responsibility</h4>
+                <ul>
+                  <li>Revamp the project to API based.</li>
+                  <li>Written the code logic and their implementations.</li>
+                  <li>Translate the requirements to actual code.</li>
+                  <li>Frequent code reviews and code optimization.</li>
+                  <li>
+                    Worked with cross department team to implement the project.
+                  </li>
+                  <li>
+                    Collaborated with management, internal and development
+                    partners regarding project design status and progress
+                  </li>
+                  <li>Maintained existing system and daily bugs fix.</li>
+                  <li>Providing technical support to the clients.</li>
+                  <li>
+                    Implement and using Git to control the version of the
+                    software during development.
+                  </li>
+                  <li>
+                    Introduced and prepared coding standard documentation.
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <ul>
+              <li>
                 <h3>SmartCA</h3>
                 <ul class="skills">
                   <li>ReactJS</li>
@@ -336,8 +387,8 @@
                 </ul>
                 <h4 class="desc">Description</h4>
                 <p>
-                  SmartCA is a tool that consists of two parts. The first part
-                  is designed to help staff members manage and track
+                  SmartCA is a in house tool that consists of two parts. The
+                  first part is designed to help staff members manage and track
                   infrastructure and related data, including location, cost, and
                   usage information. SmartCA has a mapping feature that allows
                   staff members to view and manipulate data about the
@@ -380,6 +431,7 @@
                   <li>CSS</li>
                   <li>MSSQL</li>
                   <li>Git</li>
+                  <li>Docker</li>
                 </ul>
                 <h4 class="desc">Description</h4>
                 <p>
